service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: pibisi-service-new
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: pibisi
  type: LoadBalancer
status:
  loadBalancer: {}
