Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pibisi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Assicurati di avere un Ingress Controller attivo
  rules:
    - host: api.aegisx.cloud  # Cambialo in base al tuo dominio o IP
      http:
        paths:
          - path: /pibisi
            pathType: Prefix
            backend:
              service:
                name: pibisi-service
                port:
                  number: 8080
